--- a/LD01/index.html
+++ b/LD01/index.html
@@ -5,11 +5,7 @@
 
 <head>
 <title>My web page!</title>
-
 </head>
-
-
-
 
 
 <body>
@@ -25,23 +21,13 @@
 <p>cardssssss</p>
 <br>
 <ul>
-<a href="https://www.britannica.com/sports/ball-sports">sports</a>
-<br>
-<a href="https://en.wikipedia.org/wiki/Sport">hype</a>
-<br>
-<a href="https://www.healthyeating.org/nutrition-topics/general/food-groups/fruits">fruits</a>
+    <li><a href="https://www.britannica.com/sports/ball-sports">sports</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Sport">hype</a></li>
+    <li><a href="https://www.healthyeating.org/nutrition-topics/general/food-groups/fruits">fruits</a></li>
+</ul>
 <br>
 <img height="400px" width="400px" src="https://www.aqueon.com/-/media/project/oneweb/aqueon/us/blog/ways-to-know-your-fish-are-happy/fish-are-happy-and-healthy-1.png">
-</ul>
-<img height="400px" width="400px" src="Cat100.jpg">
-
-
-
+<img height="400px" width="400px" src="../Cat100.jpg">
 </body>
-
-
-
-
-
 
 </html>
