--- a/[XI]/flexbox.html
+++ b/[XI]/flexbox.html
@@ -8,27 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="main-cointainer">
-        <div id="row1">
+    <div id="main-cointainer"></div>
+        <div id="row1"></div>
 
-        <div id="item1">
+        <div id="item1"></div>
 
-        <div id="row2">
-        <div id="item1">2
-        <div id="item2">3
-        <div id="item3">4
-        <div id="item4">5
+        </div>
 
-        <div id="row3"><
+        <div id="row2"></div>
 
-        <div id="item1">6<
-        <div id="item2">7
+        <div id="item1">2</div>
+        <div id="item2">3</div>
+        <div id="item3">4</div>
+        <div id="item4">5</div>
 
-        <div id="row4">    
-        <div id="item1">8
-        <div id="item2">9
+        </div>
+
+        <div id="row3"></div>
+
+        <div id="item1">6</div>
+        <div id="item2">7</div>
+
+        </div>
+
+        <div id="row4"></div>  
+        <div id="item1">8</div>
+        <div id="item2">9</div>
     </div>
 
+
+    </div>
 
 </body>
 </html>
