--- a/2Semestris/Tasks.html
+++ b/2Semestris/Tasks.html
@@ -27,7 +27,8 @@
                 <div class="Task_preview"></div>
                     <img width="100px" height="100px" src="">
                     <br>
-                    <a href="/10.01.2025"
+                    <a href="/10.01.2025/1uzd.html">Open</a>
                 </div>
+            </div>
         </body>
 </html>
